--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,11 +1,25 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
-  </head>
-  <body>
-  {% for name in names: %}
-    <p>{{ name.name }}</p>
-  {% endfor %}
-  </body>
-  <a href="/new">New Name</a>
+<head>
+    <title>Index</title>
+</head>
+<body>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Action</th>
+    </tr>
+    {% for product in products %}
+        <tr>
+            <td>{{ product['name']}}</td>
+            <td>{{ product['description']}}</td>
+            <td>${{ product['price']}}</td>
+            <td><a href="/products/show/{{product['id']}}">Show</a> | <a href="/products/edit/{{product['id']}}">Edit</a> | <form action="/products/delete/{{product['id']}}" method='post' style= 'display:inline'><button>Delete</button></form></td>
+        </tr>
+    {% endfor %}
+</table>
+<a href="/products/new">Create a new product</a>
+</body>
 </html>
